--- a/NPoco.iSeriesTest/App.config
+++ b/NPoco.iSeriesTest/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="as400" connectionString="Data Source=***;UserID=***;Password=***;" providerName="IBM.Data.DB2.iSeries"/>
+    <add name="as400" connectionString="Data Source=****;UserID=****;Password=****;" providerName="IBM.Data.DB2.iSeries"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
